<resources>
    <string name="app_name">FoodDelivery</string>

    <string name="title_activity_maps">Map</string>

    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map.</string>
    <string name="location_permission_denied">The app requires location permission to enable your location. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required to display the map.</string>


    <string name="welcome">Welcome</string>
    <string name="loginHint">Enter your number</string>
    <string name="OtpHint">Enter the code</string>
    <string name="OtpButton">Send Again</string>
    <string name="SendOtp">Send OTP</string>
    <string name="RequestOtp">Request OTP</string>

</resources>
