<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sayandeep.fooddelivery.LoginActivity">
<LinearLayout
    android:id="@+id/login1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="115dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/welcome"
        android:layout_gravity="center_vertical"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_gravity="center_vertical"
        android:inputType="text"
        android:fontFamily="@font/abeezee"
        android:hint="@string/loginHint"
        android:layout_marginTop="36dp"
        android:ems="10"

       />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:text="@string/RequestOtp"
        android:background="#FF69B4"
        android:textColor="#fff"
        android:layout_marginTop="40dp"
        android:id="@+id/requestOtp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login2"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_marginTop="125dp"
        >
        <EditText
            android:id="@+id/etOtp"
            android:fontFamily="@font/abeezee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:inputType="number"
            android:hint="@string/OtpHint"
            android:layout_marginTop="36dp"
            android:ems="10"/>
        <Button
            android:id="@+id/btnSendOtp"
            android:text="@string/SendOtp"
            android:layout_marginStart="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF69B4"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/btnResendOtp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:background="#FF69B4"
            android:layout_marginTop="40dp"
            android:text="@string/OtpButton"
            android:textColor="#fff" />

    </LinearLayout>
</RelativeLayout>
